--- a/content/posts/2020-02-14/index.mdx
+++ b/content/posts/2020-02-14/index.mdx
@@ -1,8 +1,9 @@
----
-title: 300ピッチに向けて ~後がない~
+<!-- ---
+title: 300ピッチノックに向けて
 author: Shun Kakinoki
 date: 2020-02-14
-slug: pitch-300
+slug: "pitch-300"
 hero: ./images/hero.jpg
-excerpt: WIP
+excerpt:
 ---
+ -->
